simple service that periodically adds the published user into the database

--- a/publisher/src/main/resources/application.properties
+++ b/publisher/src/main/resources/application.properties
@@ -2,5 +2,6 @@ solace.jms.host=smf://localhost:55554
 solace.jms.msgVpn=default
 solace.jms.clientUsername=default
 solace.jms.clientPassword=default
+topic.name=user/create
 
 spring.main.allow-bean-definition-overriding=true
