--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -6,19 +6,20 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.6</version>
-		<relativePath /> 
+		<version>3.2.1</version>
+		<relativePath />
 	</parent>
 
-	<groupId>com.solace.samples.spring.boot</groupId>
-	<artifactId>autoconfig-sender</artifactId>
+	<groupId>works.integration</groupId>
+	<artifactId>userservice-pub</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>autoconfig-sender</name>
-	<description>Sample Spring Boot Autoconfig PubSub+ Sender</description>
+	<name>userservice-publisher</name>
+	<description>EDA use service publisher</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>17</java.version>
 	</properties>
 
 	<build>
@@ -34,7 +35,16 @@
 		<dependency>
 			<groupId>com.solace.spring.boot</groupId>
 			<artifactId>solace-jms-spring-boot-starter</artifactId>
- 			<version>5.0.0</version>
+			<version>5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
