--- a/subscriber/pom.xml
+++ b/subscriber/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>works.integration</groupId>
 	<artifactId>userservice-sub</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>userservice-sub</name>
 	<description>EDA use service subscriber</description>
