--- a/subscriber/src/main/resources/application.properties
+++ b/subscriber/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-solace.jms.host=smf://localhost:55554
+solace.jms.host=smf://solace:55555
 solace.jms.msgVpn=default
 solace.jms.clientUsername=default
 solace.jms.clientPassword=default
 topic.name=user/create
-spring.datasource.url=jdbc:postgresql://localhost:5432/compose-postgres
-spring.datasource.username=compose-postgres
-spring.datasource.password=compose-postgres
-spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
