--- a/publisher/pom.xml
+++ b/publisher/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>works.integration</groupId>
 	<artifactId>userservice-pub</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>userservice-publisher</name>
 	<description>EDA use service publisher</description>
