fix adding mock data

--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -1,3 +1,5 @@
 FROM eclipse-temurin:17-jdk-focal
-COPY target/userservice-pub-0.0.1.jar userservice-pub-0.0.1.jar
-ENTRYPOINT ["java","-jar","userservice-pub-0.0.1.jar"]
+WORKDIR /app
+COPY target/userservice-pub-0.0.1.jar /app/userservice-pub-0.0.1.jar
+COPY src/main/resources/MOCK_DATA.csv /app/data/MOCK_DATA.csv
+ENTRYPOINT ["java","-jar","/app/userservice-pub-0.0.1.jar"]
